Bevel modifier assert crash #57045

Closed
opened 2018-10-03 15:25:05 +02:00 by Dalai Felinto · 8 comments

Blender Version
Broken: b6c1443742 (blender2.8 HEAD)
Worked: Not sure, I can't test 2.79 debug at the moment.

Short description of error
Geometry with bevel modifier crashes

Exact steps for others to reproduce the error
Just open this simple geometry created in 2.79 in 2.8.
wall-crash.blend

BLI_assert failed: //source/blender/bmesh/tools/bmesh_bevel.c:3312, snap_to_pipe_profile(), at '!"failed inverse during pipe profile snap"'
Full backtrace: P789

**Blender Version** Broken: b6c144374271 (blender2.8 HEAD) Worked: Not sure, I can't test 2.79 debug at the moment. **Short description of error** Geometry with bevel modifier crashes **Exact steps for others to reproduce the error** Just open this simple geometry created in 2.79 in 2.8. [wall-crash.blend](https://archive.blender.org/developer/F4920813/wall-crash.blend) `BLI_assert failed: //source/blender/bmesh/tools/bmesh_bevel.c:3312, snap_to_pipe_profile(), at '!"failed inverse during pipe profile snap"'` Full backtrace: [P789](https://archive.blender.org/developer/P789.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Leaving this as unconfirmed until I (or someone else?) test it in master (with crash on asserts and debug mode).
The crash is real though.

Leaving this as unconfirmed until I (or someone else?) test it in master (with crash on asserts and debug mode). The crash is real though.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Can confirm in master on windows.

Can confirm in master on windows.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member
[D4104](https://archive.blender.org/developer/D4104)

This issue was referenced by ae028ef206

This issue was referenced by ae028ef206cff475ec314db68d6d111f83b96a5d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57045
No description provided.