Fix T57045: Unhandled degenerate case in bevel code

Reviewers: howardt

Differential Revision: https://developer.blender.org/D4104